tests/functional/lang/eval-fail-add-2.err.exp
error:
       … while calling the 'add' builtin
         at /pwd/lang/eval-fail-add-2.nix:1:1:
            1| builtins.add 1 "foo"
             | ^
            2|

       … while evaluating the second argument of the addition

       error: expected an integer but found a string: "foo"
